tests/invalid_inputs/sema/void_param.cpp
// test that parameter with type void is caught

void f(void param);
